--- a/AppMvcBasica/Views/Fornecedores/Create.cshtml
+++ b/AppMvcBasica/Views/Fornecedores/Create.cshtml
@@ -23,15 +23,21 @@
                 <span asp-validation-for="Documento" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="TipoFornecedor" class="control-label"></label>
-                <select asp-for="TipoFornecedor" class="form-control"></select>
-                <span asp-validation-for="TipoFornecedor" class="text-danger"></span>
+                <label asp-for="TipoFornecedor" class="control-label"></label><br />
+                <input type="radio" value="1" asp-for="TipoFornecedor" checked /> Pessoa Física<br />
+                <input type="radio" value="2" asp-for="TipoFornecedor" /> Pessoa Jurídica<br />
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
                     <input class="form-check-input" asp-for="Ativo" /> @Html.DisplayNameFor(model => model.Ativo)
                 </label>
             </div>
+
+            <hr />
+            <h4>_Endereço</h4>
+
+            <partial name="_Endereco"/>
+
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
