--- a/AppMvcBasica/Views/Fornecedores/Edit.cshtml
+++ b/AppMvcBasica/Views/Fornecedores/Edit.cshtml
@@ -24,8 +24,10 @@
             </div>
             <div class="form-group">
                 <label asp-for="TipoFornecedor" class="control-label"></label>
-                <select asp-for="TipoFornecedor" class="form-control"></select>
-                <span asp-validation-for="TipoFornecedor" class="text-danger"></span>
+                <div class="form-group">
+                    <input type="radio" value="1" asp-for="TipoFornecedor" checked="@((int)Model.TipoFornecedor == 1)" /> Pessoa Física<br />
+                    <input type="radio" value="2" asp-for="TipoFornecedor" checked="@((int)Model.TipoFornecedor == 2)" /> Pessoa Jurídica<br />
+                </div>
             </div>
             <div class="form-group form-check">
                 <label class="form-check-label">
